log
Thu 20 Apr 2023 07:47:03 PM UTC: 
 tests:  1|8
total_score: 0/70
82a852b
Thu 20 Apr 2023 07:55:32 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
9563b5b
Thu 20 Apr 2023 07:56:07 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:41:5: error: ‘new_map’ undeclared (first use in this function)
   41 |     new_map->root = NULL;
      |     ^~~~~~~
treemap.c:41:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ad14489
